--- a/assets/css/custom-form-styles.css
+++ b/assets/css/custom-form-styles.css
@@ -7,6 +7,14 @@
  Last Updated : 19/03/2014
 
 - - - - - - - - - - - - - - - - - - - - - */
+body {
+	-webkit-font-smoothing: antialiased;
+}
+
+#wufoo-r1nsuxzg0jz7b10 {
+	margin-top: 35px;
+}
+
 .wufoo .info {
 	text-align: center;
 	border-bottom: none;
@@ -15,7 +23,7 @@
 .wufoo .info h2 {
 	font-size: 26px;
 	color: #1a1a1a;
-	margin-top: 80px;
+	margin-top: 42px;
 	line-height: 1.4;
 }
 
@@ -38,10 +46,6 @@
 	-webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 	box-sizing: border-box;
-}
-
-a[href="https://master.wufoo.com/forms/m7p0x3/def/field1=safetycircle.wufoo.com/forms/wed-like-to-hear-from-you/"] {
-	display: none;
 }
 
 input.btTxt  {
