--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -164,6 +164,7 @@ h2, .h2, h2 > a {
 .glyphicon {
   top: 3px;
 }
+
 /* ===============Navigation=============== */
 #main-navigation {
   padding: 20px 0;
@@ -669,6 +670,11 @@ label {
   margin-bottom: 10px;
 }
 
+/* ===============Contact Page=============== */
+#wufoo-r1nsuxzg0jz7b10 {
+  margin-top: 35px;
+  margin-bottom: 10px;
+}
 
 /* ===============Helper Styles=============== */
 
