Changed Azure address

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,7 +30,7 @@
                   {% if page.active == "dashboard" %}
                       <li><a href="#"  class="current">Dashboard</a></li>
                   {% else %}
-                      <li><a href="http://safetycircle.azurewebsites.net/">Dashboard</a></li>
+                      <li><a href="http://safety-circle.azurewebsites.net/">Dashboard</a></li>
                   {% endif %}
                 </ul>
               </div>
