client logos and imp safety logo added

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -127,8 +127,8 @@
                 {% endif %}
             </ul>
           </div>
-          <div class="col-sm-6">
-    
+          <div class="col-sm-6 text-right">
+            <a href="http://www.ipmsafety.com.au" class="footer-logo" target="_blank"><img src="assets/img/ipm-safety.png" alt="" class=""></a>
           </div>
         </div>
       </div>
