--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -106,7 +106,7 @@
     <div id="footer">
       <div class="container">
         <div class="row">
-          <div class="col-sm-6">
+          <div class="col-xs-7">
             <ul class="menu footer-nav">
                 {% if page.active == "faq" %}
                       <li><a href="#"  class="current">FAQ</a></li>
@@ -127,8 +127,8 @@
                 {% endif %}
             </ul>
           </div>
-          <div class="col-sm-6 text-right">
-            <a href="http://www.ipmsafety.com.au" class="footer-logo" target="_blank"><img src="assets/img/ipm-safety.png" alt="" class=""></a>
+          <div class="col-xs-5 text-right">
+            <a href="http://www.ipmsafety.com.au" class="footer-logo" target="_blank">SafetyCircle is a wholly owned subsidiary of<img src="assets/img/ipm-safety.png" alt="" class=""></a>
           </div>
         </div>
       </div>
