--- a/_includes/head.html
+++ b/_includes/head.html
@@ -103,7 +103,7 @@
 {% endif %}
 
 <!-- TypeKit Font -->
-<script type="text/javascript" src="//use.typekit.net/jpd2ias.js"></script>
+<script type="text/javascript" src="//use.typekit.net/aqq8zlw.js"></script>
 <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
 <!-- Icons -->
