--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -128,7 +128,7 @@
             </ul>
           </div>
           <div class="col-xs-5 text-right">
-            <a href="http://www.ipmsafety.com.au" class="footer-logo" target="_blank">SafetyCircle is a wholly owned subsidiary of<img src="assets/img/ipm-safety.png" alt="" class=""></a>
+            <a href="http://www.ipmsafety.com.au" class="footer-logo" target="_blank">SafetyCircle is a wholly owned subsidiary of<img src="{{site.baseurl}}/assets/img/ipm-safety.png" alt="" class=""></a>
           </div>
         </div>
       </div>
