Register page and other changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -101,6 +101,12 @@
     {% endif %}
 </footer> -->
 
+{% if page.active != "register" %}
+      <a href="{{site.baseurl}}/register.html" class="follow-btn">Register for updates</a>
+{% endif %}
+
+
+
 
 <footer>
     <div id="footer">
