resources, book webinar form and reg for updates

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -102,9 +102,9 @@
     </script>
 {% endif %}
 
-<!-- TypeKit Font -->
-<script type="text/javascript" src="//use.typekit.net/aqq8zlw.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<!-- TypeKit Font - Served from Rami Yahya's Adobe Account-->
+<script src="//use.typekit.net/xmd7jqt.js"></script>
+<script>try{Typekit.load();}catch(e){}</script>
 
 <!-- Icons -->
 <!-- 16x16 -->
