--- a/_includes/signoff.html
+++ b/_includes/signoff.html
@@ -1,5 +1,5 @@
 <div class="post-author text-center">                       
 	        <img src="{{site.baseurl}}/images/michael-roberts.jpg" alt="{{ site.owner.name }}'s photo" itemprop="image" class="post-avatar img-circle img-responsive"/>    
 	    <h4 class="bordered-bottom vcard author" itemprop="author" itemscope itemtype="http://schema.org/Person">By <span itemprop="name" class="fn"><a href="{{site.baseurl}}/about" title="About {{ site.owner.name }}" itemprop="url">{{ site.owner.name }}</a></span></h4>
-	    <p>{{ site.owner.description }}</p>
+	    <p class="desc col-md-8 col-md-offset-2">{{ site.owner.description }}</p>
 </div>
