--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -85,6 +85,13 @@ a:hover {
   font-size: 18px;
   font-style: italic;
 }
+
+.more-link-alt {
+  display: block;
+  text-align: center;
+  margin-top: 5px;
+}
+
 /* - Lead text - */
 .lead {
   font-size: 18px;
@@ -495,7 +502,6 @@ html {
 }
 .post-body img {
   max-width: 100%;
-  margin-bottom: 24px;
 }
 .post-body a {
   border-bottom: 1px dotted;
@@ -3851,6 +3857,14 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 49px;
   margin-bottom: 14px;
   line-height: 1.4; }
+
+ol {
+  margin-bottom: 20px;
+}
+
+ol li {
+  margin-bottom: 3px;
+}
 
 li {
   margin-bottom: 24px; }
