changes to remove webinar section and white band on home page

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,9 +23,9 @@
                       <li><a href="{{site.baseurl}}/blog/">Blog</a></li>
                   {% endif %}
                   {% if page.active == "videos-and-webinars" %}
-                      <li><a href="#"  class="current">Videos & Webinars</a></li>
+                      <li><a href="#"  class="current">Short Videos</a></li>
                   {% else %}
-                      <li><a href="{{site.baseurl}}/videos-and-webinars.html">Videos & Webinars</a></li>
+                      <li><a href="{{site.baseurl}}/videos-and-webinars.html">Short Videos</a></li>
                   {% endif %}
                   {% if page.active == "dashboard" %}
                       <li><a href="#"  class="current">Dashboard</a></li>
